--- a/templates/body.htm
+++ b/templates/body.htm
@@ -6,26 +6,26 @@
             <div class="inTitle">
             	<div class="payLi active">
                 	<div class="inNumber">1</div>
-                    <div id="tip_select_offer" class="inText"></div>
+                    <div id="tip_select_offer" class="inText"><%=obj.tip_select_payment_method%></div>
                 </div>
                 <div class="payLi active">
                 	<div class="inNumber">2</div>
-                    <div id="tip_choose_payment_method" class="inText"></div>
+                    <div id="tip_choose_payment_method" class="inText"><%=obj.tip_select_package%></div>
                 </div>
                 <div class="payLi" id="inLast">
                 	<div class="inNumber">3</div>
-                    <div id="tip_compare_and_order" class="inText"></div>
+                    <div id="tip_compare_and_order" class="inText"><%=obj.tip_compare_and_order%></div>
                 </div>
                 <div class="clear"></div>
             </div>
             <div class="inContent">
             	<div class="payLeft">
-                	<div id="tip_select_payment_method" class="tagTitle"></div>
+                	<div id="tip_select_payment_method" class="tagTitle"><%=obj.tip_select_payment_method%></div>
                     <div id="payment_methods" class="payList"></div>	
                 </div>
                 <div class="payright">
                     <div class="tagTitle">
-                    	<h1 id="tip_select_package"></h1>
+                    	<h1 id="tip_select_package"><%=obj.tip_select_package%></h1>
                         <p id="tip_customer_service_email"></p>
                     </div>
                     <div class="payListCont">
